// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--check with unknown path and no parser multiple files  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".
[warn] foo.js",
  "stdout": "Checking formatting...
Error occurred when checking code style in the above file.",
}
`;

exports[`--check with unknown path and no parser specific file  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".",
  "stdout": "Checking formatting...
Error occurred when checking code style in the above file.",
}
`;

exports[`--list-different with unknown path and no parser multiple files  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".",
}
`;

exports[`--list-different with unknown path and no parser specific file  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".",
}
`;

exports[`--write and --check with unknown path and no parser multiple files  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".
[warn] foo.js",
  "stdout": "Checking formatting...
Error occurred when checking code style in the above file.",
  "write": [
    {
      "content": "foo();
",
      "filename": "foo.js",
    },
  ],
}
`;

exports[`--write and --check with unknown path and no parser specific file  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".",
  "stdout": "Checking formatting...
Error occurred when checking code style in the above file.",
}
`;

exports[`--write and --list-different with unknown path and no parser multiple files  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".",
  "stdout": "foo.js",
  "write": [
    {
      "content": "foo();
",
      "filename": "foo.js",
    },
  ],
}
`;

exports[`--write and --list-different with unknown path and no parser specific file  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".",
}
`;

exports[`--write with unknown path and no parser multiple files  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".",
  "stdout": "foo.js 0ms",
  "write": [
    {
      "content": "foo();
",
      "filename": "foo.js",
    },
  ],
}
`;

exports[`--write with unknown path and no parser specific file  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".",
}
`;

exports[`Interpreters  1`] = `
{
  "stdout": "{ "ignored": false, "inferredParser": "babel" }",
}
`;

exports[`Known/Unknown  1`] = `
{
  "stdout": "known.js",
}
`;

exports[`isSupported  1`] = `
{
  "stdout": "{
  "ignored": false,
  "inferredParser": "parser-name-inferred-from-language-is-supported"
}",
}
`;

exports[`isSupported  2`] = `
{
  "stdout": "content from file
formatted by 'parser-name-inferred-from-language-is-supported' parser",
}
`;

exports[`isSupported  3`] = `
{
  "stdout": "content from stdin
formatted by 'parser-name-inferred-from-language-is-supported' parser",
}
`;

exports[`stdin no path and no parser --check logs error but exits with 0  1`] = `
{
  "stderr": "[error] No parser and no file path given, couldn't infer a parser.",
}
`;

exports[`stdin no path and no parser --list-different logs error but exits with 0  1`] = `
{
  "stderr": "[error] No parser and no file path given, couldn't infer a parser.",
}
`;

exports[`stdin no path and no parser logs error and exits with 2  1`] = `
{
  "stderr": "[error] No parser and no file path given, couldn't infer a parser.",
}
`;

exports[`stdin with unknown path and no parser --check logs error but exits with 0  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/foo".",
}
`;

exports[`stdin with unknown path and no parser --list-different logs error but exits with 0  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/foo".",
}
`;

exports[`stdin with unknown path and no parser logs error and exits with 2  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/foo".",
}
`;

exports[`unknown path and no parser multiple files  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".",
  "stdout": "foo();",
}
`;

exports[`unknown path and no parser specific file  1`] = `
{
  "stderr": "[error] No parser could be inferred for file "<cli>/infer-parser/FOO".",
}
`;
